# studyLM

./: README.md  chat-pdf.py  main.py  metadata_extraction.py  ollama_embeddings.py  pyproject.toml  test.txt
chroma_store/: chroma.sqlite3
vector_store/: build_vector_store.py
workflow/: chroma_store.py  chunker.py  chunking.py  cleaner.py  metadata_extractor.py  pdf_parser.py  proper_cleaned_chunks.txt
workflow/chroma_store/: chroma.sqlite3
