[project]
name = "studylm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.67",
    "langchain-deepseek>=0.1.3",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.3",
    "langchain-tavily>=0.2.5",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.5.0",
    "langsmith>=0.4.4",
    "pymupdf>=1.26.1",
    "pypdf2>=3.0.1",
    "sentence-transformers>=5.0.0",
]
